# mela-rss

./: .gitignore  README.md  pyproject.toml  requirements.txt  sources.yaml
.github/workflows/: build.yml
data/: catalog.json
docs/: cocktails.xml  feed.xml  index.html  recipes.xml
docs/bundles/: ethanchlebowski.melarecipes  joshuaweissman.melarecipes  justinesnacks.melarecipes
docs/feeds/: andycooks.xml  ethanchlebowski.xml  jamieoliver.xml  joshuaweissman.xml  justinesnacks.xml
docs/recipes/joshuaweissman/: authentic-chinese-breakfast-at-home-jianbing-07d788ac.html  cooking-tools-everyone-needs-ce4377d3.html  easy-low-calorie-53g-protein-mcgriddle-0519c9a0.html  easy-low-calorie-61g-protein-butter-chicken-92ebed54.html  (+17 more)
sources/: amourdrink_posts.txt  cocktailcamera_posts.txt  drinksbyevie_posts.txt  finntonry_posts.txt  jfdesfosses_posts.txt  kevinkos_posts.txt  moresavorygoods_posts.txt  mother_cocktail_bar_posts.txt  pch_sf_posts.txt  verygooddrinks_posts.txt
src/melarss/: __init__.py  build.py  caption.py  catalog.py  config.py  extract.py  feeds.py  http.py  images.py  melarecipes.py  models.py  normalize.py  rehost.py
templates/: recipe.html.j2
tests/: conftest.py  test_build.py  test_caption.py  test_catalog.py  test_discovery.py  test_extract.py  test_feeds.py  test_images.py  test_instagram.py  test_melarecipes.py  test_mindlink.py  test_normalize.py  test_rehost.py
tests/fixtures/: atom_feed.xml  jsonld_recipe.html  jsonld_recipe_nodate.html  no_recipe.html  rss_feed.xml  sitemap-recipes-1.xml  sitemap_index.xml
(+9 files in other folders)
